Add conflict reviewer for merge from upstream

--- a/.github/pull.yml
+++ b/.github/pull.yml
@@ -9,3 +9,5 @@ rules:
     upstream: freakboy3742:master
     mergeMethod: hardreset
     mergeUnstable: true
+    conflictReviewers:
+      - skulegirl
